# buss2

./: .env  .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.yml
backend/: Cargo.toml
backend/migrations/2023-04-01-160102_create_stops/: down.sql  up.sql
backend/migrations/2023-04-01-180857_create_quays/: down.sql  up.sql
backend/migrations/2023-04-02-081136_create_journeys/: up.sql
backend/migrations/2023-04-02-083508_create_estimated_calls/: down.sql  up.sql
backend/migrations/2023-04-02-130833_add_journey_direction/: down.sql
backend/migrations/2023-04-02-144841_make_stop_id_non_nullable/: down.sql  up.sql
backend/src/: db.rs  lib.rs  models.rs  schema.rs  timetables.rs
backend/src/api/: favorites.rs  journeys.rs  mod.rs  quays.rs  stops.rs
config/: Caddyfile  buss2.service  buss2.socket
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  quasar.config.js  tsconfig.json
frontend/src/: db.ts  helpers.ts
frontend/src-pwa/: manifest.json
frontend/src/boot/: i18n.ts
frontend/src/components/: DepartureItem.vue  FormattedDelay.vue  JourneyTimelineEntry.vue  MenuItem.vue  StopProgress.vue  StopSearch.vue
frontend/src/css/: app.scss  quasar.variables.scss
frontend/src/i18n/: index.ts
frontend/src/i18n/en-US/: index.ts
frontend/src/i18n/nb/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: IndexPage.vue  JourneyPage.vue  QuayPage.vue  SearchPage.vue  StopPage.vue
frontend/src/router/: routes.ts
frontend/src/stores/: app-store.ts
migrations/2023-04-01-180857_create_quays/: up.sql
migrations/2023-04-01-183159_create_routes/: up.sql
migrations/2023-04-02-081136_create_journeys/: down.sql
migrations/2023-04-02-130833_add_journey_direction/: up.sql
src/: db.rs  helpers.rs  lib.rs  models.rs  schema.rs  timetables.rs
