[package]
name = "buss2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "import"
path = "src/bin/import.rs"


[dependencies]
csv = "1.2.1"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15"