[package]
name = "buss2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[bin]]
name = "import"
path = "src/bin/import.rs"

[dependencies]
csv = "1.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
deadpool = "0.9.5"
diesel = { version = "2.0.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
dotenvy = "0.15"
reqwest = "0.11.16"
serde = { verison = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
anyhow = "1.0.70"
axum = "0.6.12"
ts-rs = { version = "6.2.1", features = ["chrono-impl"] }